--- a/app/src/main/res/layout/activity_tela_filtro_terreno_metro.xml
+++ b/app/src/main/res/layout/activity_tela_filtro_terreno_metro.xml
@@ -1,9 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp"
     tools:context="br.com.lvbfontes.imobiliaria.TelaFiltroTerrenoMetro">
 
-</android.support.constraint.ConstraintLayout>
+    <TextView
+        style="@style/FiltroCabecalho"
+        android:text="@string/txtTelaFiltroTerrenoMetro"/>
+
+</LinearLayout>
